# RDB2G-Bench

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  gnn_node_worker.py  idgnn_link_worker.py  pyproject.toml  requirements.txt  run_benchmark.py
benchmark/: benchmark.py  dataset.py  micro_action.py
benchmark/baselines/: bo.py  ea.py  gnn.py  utils.py
benchmark/baselines/model/: gnn_model.py
benchmark/llm/: llm.py  llm_autog.py  llm_micro_action.py
benchmark/llm/prompts/: action.txt  prompt.py  task.json  type_infer_prompt.json
common/: get_search_size.py  plot_graph.py
dataset/: utils.py
dataset/analysis/: edge_info.json  search_size_stats.csv
dataset/models/: model.py
dataset/models/modules/: gin_conv.py  gps_conv.py  nn.py  sage_conv_edge.py
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst  readme.rst
docs/source/010/: install_and_setup.rst  tutorial.rst
docs/source/020/: download_precomputed.rst  reproduce_datasets.rst
docs/source/030/: bayesian_optimization.rst  benchmark_dataset.rst  evolutionary_algorithm.rst  greedy_search.rst  llm_baseline.rst  micro_action.rst  random_search.rst  reinforcement_learning.rst  run_benchmark.rst
examples/: download_dataset.py  load_dataset.py  run_benchmark.py  run_gnn_node.py  run_idgnn_link.py
rdb2g_bench/: __init__.py
rdb2g_bench/benchmark/: __init__.py  bench_runner.py  benchmark.py  dataset.py  micro_action.py  runner.py
rdb2g_bench/benchmark/baselines/: bo.py  ea.py  greedy.py  random.py  rl.py  utils.py
rdb2g_bench/benchmark/llm/: __init__.py  llm_micro_action.py  llm_runner.py  llm_utils.py
rdb2g_bench/common/: __init__.py
rdb2g_bench/common/search_space/: gnn_search_space.py  row2ne_search_space.py  search_space.py
rdb2g_bench/dataset/: __init__.py  bench.py  dataloader.py  dataset.py  link_worker.py  node_worker.py
(+9 files in other folders)
